--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
+    "graphql-relay": "^0.5.5",
     "graphql-sequelize": "^9.0.4",
     "sequelize": "^4.39.1",
     "sequelize-cli": "^5.1.0",
